[WFCORE-5410] Update elytrong subsystem to take modular jdk params into account.