@@ -2347,8 +2347,11 @@
                 <!-- match 9+ -->
             </activation>
             <properties>
-                <modular.jdk.args>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                    --add-modules=java.se</modular.jdk.args>
+              <modular.jdk.args>
+		--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+	        --add-opens=java.base/java.security=ALL-UNNAMED
+                --add-modules=java.se
+	      </modular.jdk.args>
             </properties>
         </profile>
         <!--
